# kiritolang.github.io

./: .gitattributes  .gitignore  AUDIT_NOTES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_LICENSES.md  main.cpp
.audit/: README.md
.audit/doc-verify/: DISCREPANCIES.md  README.md  disc_base64_csv_copy_enum.md  disc_collections_heapq_bisect.md  disc_hash_compress.md  disc_itertools_functools.md  disc_json_serde.md  disc_matrix_complex.md  disc_net.md  disc_operators.md  disc_parallel.md  disc_random.md  disc_regex.md  disc_statistics_string_textwrap.md  disc_sys_time.md  disc_tabular.md  disc_tee_arg.md  disc_tensor.md  disc_types_bytes.md  disc_types_collections.md  disc_types_scalars.md  disc_xml_semver.md
.audit/v1.12/: FINDINGS.md
.audit/v1.12.1/: BRIEFING.md  README.md
.audit/v1.13/: FINDINGS.md  README.md
.audit/v1.14/: FINDINGS.md  README.md
.audit/v1.14.1/: FINDINGS.md  README.md
.audit/v1.15/: BRIEFING.md  FINDINGS.md  README.md
.audit/v1.15.1/: FINDINGS.md  README.md
.audit/v1.16.1/: FINDINGS.md  README.md
.claude/: POST_WORK_CHECKLIST.md  settings.json
.claude/hooks/: enforce_claude_branch.py
.github/workflows/: nightly.yml  static.yml
audit_v1_12/: FINDINGS.md  README.md
audit_v1_12/agents/: A01.md  A02.md  A03.md  A04.md  A05.md  A06.md  A07.md  A08.md  A09.md  A10.md  A11.md  A12.md  A13.md  A14.md  A15.md  A16.md  A17.md  A18.md  A19.md  A20.md  A21.md  A22.md
audit_v1_13/: FINDINGS.md
audit_v1_13/agents/: A01_lexer.md  A02_parser.md  A03_resolver_analyzer.md  A04_compiler.md  A05_bytecode_vm.md  A06_runtime_dispatch.md  A08_arena_gc_pool.md  A09_collections.md  A10_string_bytes.md  A11_builtins.md  A15_tensor.md  A17_json_serde.md  A18_net.md  A21_regex.md  A23_kimods1.md  A24_kimods2.md
docs/: README.md  build_docs.py
docs/editors/: README.md
docs/pages/: 00-introduction.md  01-getting-started.md  02-language-guide.md  03-recipes.md  04-packages.md  08-builtins.md  09-types.md  10-course-00-editor.md  10-stdlib.md  11-course-01-hello.md  11-cpp-api.md  12-course-02-values-numbers.md  12-exceptions.md  13-course-03-strings.md  14-course-04-control-loops.md  15-course-05-collections.md  (+16 more)
examples/: domain_suffix_bench.ki  gen_systems.ki  rpn_calculator.ki  rule34_download.ki  solve_systems.ki  stats.ki  tabular_iris.ki  tabular_sales.ki  tabular_survey.ki  todo.ki  trie.ki
kpm/: kpm.ki
src/: kirito.hpp
tests/: CMakeLists.txt  check.hpp  kpm_integration.py  net_abuse_server.py  net_tls_server.py  parallel_util.hpp  run_ki_script.cmake
tools/: versions.env
tools/tests/: CMakeLists.txt  kpm_integration.py  pch_carrier.cpp  run_ki_error.cmake
tools/tests/bench/: README.md  bench.cpp  compare.py  compare_bench.cpp  compare_bench.lua  compare_bench.py  compare_bench.sh
tools/tests/errors/: abs_non_number.experr  abs_non_number.ki  annotation_violation.ki  assert_failure.experr  assert_failure.ki  bad_escape.experr  bad_expression.ki  bigint_zero_neg_pow.ki  bool_dunder_return_integer.experr  bool_dunder_throws.experr  break_in_nested_function.ki  bytes_decode_ascii_high.experr  bytes_decode_ascii_high.ki  chained_assignment.experr  chained_assignment.ki  chained_comparison.ki  chr_out_of_range.experr  circular_import_a.experr  circular_import_a.ki  circular_import_b.ki  class_hash_wrong_type.experr  class_hash_wrong_type.ki  complex_log_zero.experr  continue_outside_loop.ki  deep_source.experr  deep_source.ki  deep_stringify.ki  dict_remove_absent.ki  division_by_zero.ki  empty_subscript.ki  enum_unknown_name.experr  enum_unknown_name.ki  finally_nested_catch_span.experr  for_non_iterable.ki  format_bad_spec.experr  format_string_comma_flag.experr  format_string_comma_flag.ki  format_string_hash_flag.experr  format_string_hash_flag.ki  fstring_unmatched_brace.ki  (+279 more)
tools/tests/fuzz/: fuzz_eval.cpp
tools/tests/integration/: embed_calc.cpp  embed_config_layer.cpp  embed_dag_engine.cpp  embed_demo.cpp  embed_dice.cpp  embed_dsl.cpp  embed_event_sourcing.cpp  embed_fsm.cpp  embed_graph_paths.cpp  embed_job_scheduler.cpp  embed_json_validator.cpp  embed_lint.cpp  embed_lru_cache.cpp  embed_markov_text.cpp  embed_metrics_agg.cpp  embed_physics_step.cpp  embed_pipe.cpp  embed_pluralize.cpp  embed_query_engine.cpp  embed_router.cpp  embed_rules.cpp  embed_shopping_cart.cpp  embed_sql.cpp  embed_strat_sim.cpp  embed_template_engine.cpp  embed_workflow_cond.cpp
tools/tests/scripts/: amarg_assert.ki  amarg_basic.ki  amarg_class.ki  amarg_conditional.ki  amarg_diamond_a.ki  amarg_diamond_b.ki  amarg_for.ki  amarg_function.ki  amarg_if.ki  amarg_listops.ki  amarg_logic.ki  amarg_recursion.ki  amarg_reimport.ki  amarg_stdlib_mix.ki  amarg_switch.ki  amarg_unpack.ki  amarg_while.ki  amarg_with.ki  arithmetic.expected  audit_adversarial.ki  audit_bisect.ki  audit_builtins.expected  audit_builtins.ki  audit_cli_argv_probe.args  audit_cli_argv_probe.expected  audit_complex.expected  audit_csv.expected  audit_csv.ki  audit_followups.expected  audit_heapq.expected  audit_heapq.ki  audit_json.expected  audit_json.ki  audit_langguide.expected  audit_langguide.ki  audit_math.expected  audit_math.ki  audit_matrix.expected  audit_matrix.ki  audit_net.expected  (+403 more)
tools/tests/unit/: test_adversarial.cpp  test_arena.cpp  test_audit_1141.cpp  test_audit_findings.cpp  test_audit_fixes.cpp  test_audit_hardening.cpp  test_audit_regressions.cpp  test_audit_round2.cpp  test_audit_v112.cpp  test_audit_v113.cpp  test_audit_v114.cpp  test_audit_v1151.cpp  test_bigint.cpp  test_builtins.cpp  test_builtins_deep.cpp  test_bytecode.cpp  test_bytes.cpp  test_bytesio.cpp  test_class_ops.cpp  test_classes.cpp  test_cli_args.cpp  test_collections.cpp  test_collections_deep.cpp  test_complex.cpp  test_compress_hash_deep.cpp  test_conditional.cpp  test_cppref_deep.cpp  test_crypto.cpp  test_domain_guards.cpp  test_dump.cpp  test_embedding_extra.cpp  test_eval_arith.cpp  test_exceptions_cpp.cpp  test_exceptions_deep.cpp  test_extras.cpp  test_fstring.cpp  test_gc.cpp  test_gc_generational.cpp  test_gc_stress.cpp  test_hardening.cpp  (+66 more)
(+1130 files in other folders)
